[package]
name = "tokio-snappy"
version = "0.1.0"
authors = ["belltoy <belltoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6.0"
futures = "0.3.8"
pin-project = "1.0.1"
snap = "1"
tokio = { version = "0.3", optional = true }
tokio-util = { version = "0.5", optional = true }

[features]
default = ["tokio"]
codec = ["tokio-util/codec"]
